feat(MessageUtils): Discussion 'convostart' try out, closure need revision.