@@ -5,9 +5,9 @@ import java.util.List;
 
 public class MessageUtils {
 
-    public static FakeUser initiliazeUser() {
+    public static List<FakeUser> initiliazeUser() {
 
-        Message message = new Message("Choose a start", List.of(
+        Message Test = new Message("Choose a start", List.of(
                 new Message("Start1", List.of(
                         new Message("1.1", Collections.emptyList()),
                         new Message("1.2", List.of(
@@ -20,7 +20,8 @@ public class MessageUtils {
                 ))
         ));
 
-        Message message2 = new Message("Planets", List.of(
+
+        Message Test2 = new Message("Planets", List.of(
                 new Message("Saturne", List.of(
                         new Message("Solar", Collections.emptyList()),
                         new Message("Pluton", List.of(
@@ -33,15 +34,94 @@ public class MessageUtils {
                 ))
         ));
 
-        Discussion discussionStart = new Discussion("Start", message);
-        Discussion discussionPlanet = new Discussion("Planets", message2);
 
-        FakeUser toto = new FakeUser("toto", null, "bonjour bio", List.of(
-                discussionStart,
-                discussionPlanet
+
+        Message convoStart = new Message("Drifter.", List.of(
+                new Message("Arthur.", List.of(
+                        new Message("What're your thoughts about On-lyne?", List.of(
+                                new Message("Who?", List.of(
+                                        new Message("The band that's everywhere you look.", List.of(
+                                                new Message("Oh. Them.", List.of(
+                                                        new Message("I just wish they'd STOP.", Collections.emptyList()),
+                                                        new Message("I love them! We didn’t have anything like that in Duviri.", List.of(
+                                                                new Message("We clearly have different tastes in music.", List.of(
+                                                                        new Message("Sup?", List.of(
+                                                                                new Message("What're your thoughts about On-lyne?", List.of(
+                                                                                        new Message("Who?", List.of(
+                                                                                                new Message("The band that's everywhere you look.", List.of(
+                                                                                                        new Message("Oh. Them.", List.of(
+                                                                                                                new Message("Meh.", List.of(
+                                                                                                                        new Message("I just wish they'd STOP.", Collections.emptyList())
+                                                                                                                )),
+                                                                                                                new Message("Do they only have the one song?", List.of(
+                                                                                                                        new Message("Exactly! I just wish they'd STOP.", Collections.emptyList()),
+                                                                                                                        new Message("I love them! We didn’t have anything like that in Duviri.", List.of(
+                                                                                                                                new Message("We clearly have different tastes in music.", Collections.emptyList()),
+                                                                                                                                new Message("Heh.", List.of(
+                                                                                                                                        new Message("Nevermind", Collections.emptyList())
+                                                                                                                                ))
+                                                                                                                        ))
+                                                                                                                ))
+                                                                                                        ))
+                                                                                                ))
+                                                                                        ))
+                                                                                ))
+                                                                        ))
+                                                                ))
+                                                        ))
+                                                ))
+                                        ))
+                                ))
+                        ))
+                ))
         ));
-        toto.setOnline();
-        return toto;
+
+        Discussion discussionStart = new Discussion("Start", Test);
+        Discussion discussionPlanet = new Discussion("Planets", Test2);
+        Discussion discussionArhtur = new Discussion("Drifter.", convoStart);
+
+
+        FakeUser Tester = new FakeUser("Tester", null, "BioTest", List.of(
+               // discussionStart,
+                // discussionPlanet,
+                discussionArhtur
+        ));
+
+        FakeUser Amir = new FakeUser("H16h V0l7463", null, "White Grey or Black, I just wear a Hat !", List.of(
+
+        ));
+
+        FakeUser Aoi = new FakeUser("xX GLIMMER Xx", null, "On-lyne 4ever ! <3", List.of(
+
+        ));
+
+        FakeUser Arthur = new FakeUser("Broadsword", null, "Need a cup of coffee first", List.of(
+
+        ));
+
+        FakeUser Eleanor = new FakeUser("Salem", null, "Knows what you think, and yes that's a bad idea...", List.of(
+
+        ));
+
+        FakeUser Ash = new FakeUser("Xx_ShadowM4st3r_xX", null, "I play Ash, so I am Ash.", List.of(
+
+        ));
+
+        Tester.setOnline();
+        Amir.setOnline();
+        Aoi.setOnline();
+        Arthur.setOnline();
+        Eleanor.setOnline();
+        Ash.setOnline();
+
+        return List.of(
+                Tester,
+                Amir,
+                Aoi,
+                Arthur,
+                Eleanor,
+                Ash
+        );
     }
 }
 
